# ezs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
jecs/: Cargo.toml
jecs/src/: entities.rs  errors.rs  lib.rs  resources.rs
jecs/src/entities/: query.rs
jecs/tests/: entities.rs  resources.rs
src/: entities.rs  ezs_errors.rs  lib.rs  resources.rs
src/entities/: query.rs
tests/: canary.rs  entities.rs  resources.rs
zombie_simulator/: Cargo.toml  README.md
zombie_simulator/src/: config.rs  lib.rs  main.rs
zombie_simulator/src/components/: acceleration.rs  color.rs  human.rs  location.rs  mod.rs  sight_range.rs  speed.rs  velocity.rs  visible_sight_range.rs  zombie.rs
zombie_simulator/src/data_structures/: vector2.rs
zombie_simulator/src/resources/: arena_size.rs  background_color.rs  clicked_location.rs  entity_mesh.rs  entity_size.rs  fps.rs  mod.rs
zombie_simulator/src/systems/: contain_in_bounds.rs  draw_entities.rs  human_repulsion.rs  insert_zombie.rs  mod.rs  randomly_walk.rs  reset_acceleration.rs  update_location.rs  update_velocity.rs  visualize_sight_range.rs  zombie_attraction.rs
zombie_simulator/src/utils/: palette.rs
