[package]
name = "jelly_ecs"
version = "1.0.1"
description= "A simple but functional ECS"
repository="https://github.com/jellycat-io/jelly_ecs"
license-file="LICENSE"
authors = ["jellycat-io <max@jellycat.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
thiserror = "1.0.29"
