[package]
name = "jecs"
version = "0.1.1"
description= "A simple but functional ECS"
repository="https://github.com/jellycat-io/jecs"
license-file="LICENSE"
authors = ["jellycat-io <max@jellycat.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
thiserror = "1.0.29"
